--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -31,7 +31,6 @@ footer, header, menu, nav, section {
 
 body {
   line-height: 1;
-  background: #f5f5f5;
 }
 
 blockquote, q {
@@ -97,6 +96,10 @@ body {
   white-space: nowrap;
 }
 
-.swiper-pagination-bullet-active.swiper-pagination-bullet{
-  background: #02a774
+*{
+  box-sizing: border-box;
+}
+
+i{
+  font-style: normal;
 }
